Use cases Login + register

--- a/gestione-orari/views/pages/footer.ejs
+++ b/gestione-orari/views/pages/footer.ejs
@@ -1,21 +1,36 @@
         </div>
         <template id="auth">
-            <form class="form-signin">
-                <h2 class="form-signin-heading">Registrazione</h2>
-        
-                <label for="inputEmail" class="sr-only">Username</label>
-                <input type="email" class="form-control" placeholder="Email address" autofocus v-model="username">
-        
-                <label for="inputPassword" class="sr-only">Password</label>
-                <input type="password" class="form-control" placeholder="Password" v-model="password">
-        
-                <!--div v-show="error" class="alert alert-danger" role="alert">Username o password sbagliata!</div-->
-                <div v-show="error" class="alert alert-danger" role="alert">Username o password incoretta!</div>
-                <div v-show="success" class="alert alert-success" role="alert">Registrazione effettuata!</div>
-                <div v-show="userExists" class="alert alert-danger" role="alert">Utente già presente!</div>
-        
-                <button class="btn btn-lg btn-primary btn-block" type="button" @click="register">Registrati</button>
-            </form>
+            <div>
+                <form class="form-signin" v-if="registrazioneForm">
+                    <h2 class="form-signin-heading">Registrazione</h2>
+                
+                    <label for="inputEmail" class="sr-only">Username</label>
+                    <input type="email" class="form-control" placeholder="Email address" autofocus v-model="username">
+                
+                    <label for="inputPassword" class="sr-only">Password</label>
+                    <input type="password" class="form-control" placeholder="Password" v-model="password">
+                
+                    <!--div v-show="error" class="alert alert-danger" role="alert">Username o password sbagliata!</div-->
+                    <div v-show="error" class="alert alert-danger" role="alert">Username o password incoretta!</div>
+                    <div v-show="success" class="alert alert-success" role="alert">Registrazione effettuata!</div>
+                    <div v-show="userExists" class="alert alert-danger" role="alert">Utente già presente!</div>
+                
+                    <button class="btn btn-lg btn-primary btn-block" type="button" @click="register">Registrati</button>
+                </form>
+                <form class="form-signin" v-if="loginForm">
+                    <h2 class="form-signin-heading">Login</h2>
+                
+                    <label for="inputEmail" class="sr-only">Username</label>
+                    <input type="email" class="form-control" placeholder="Email address" autofocus v-model="username">
+                
+                    <label for="inputPassword" class="sr-only">Password</label>
+                    <input type="password" class="form-control" placeholder="Password" v-model="password">
+                
+                    <!--div v-show="error" class="alert alert-danger" role="alert">Username o password sbagliata!</div-->
+                    <div v-show="error" class="alert alert-danger" role="alert">Username o password inesistente!</div>
+                    <button class="btn btn-lg btn-primary btn-block" type="button" @click="login">Login</button>
+                </form>
+            </div>
         </template>
         <script src="assets/js/axios.js"></script>
         <script src="assets/js/vue.js"></script>
